[gd_scene load_steps=3 format=2]

[ext_resource path="res://Burg/Keller/K07/Szene01.gd" type="Script" id=1]
[ext_resource path="res://Burg/Keller/K07/Szene01.png" type="Texture" id=2]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_left = 460.37
margin_top = 154.156
margin_right = 1111.37
margin_bottom = 236.156
text = "Diese Szene ist nicht sonderlich Spannend. 
Das Augenmerk liegt hier bei dem Skript, welches Du über den SzeneReader einsehen kannst.
Drücke die Tasten [A] [W] [E] [R] [T] , bewege die Maus oder drücke dessen Tasten und
 benutze einmal einen Joystick."
clip_text = true

[node name="Label1" type="Label" parent="."]
margin_left = 627.804
margin_top = 477.532
margin_right = 667.804
margin_bottom = 491.532
text = "1"

[node name="Label2" type="Label" parent="."]
margin_left = 625.506
margin_top = 553.062
margin_right = 665.506
margin_bottom = 567.062
text = "2"

[node name="Label3" type="Label" parent="."]
margin_left = 630.153
margin_top = 628.469
margin_right = 670.153
margin_bottom = 642.469
text = "3"

[node name="Label4" type="Label" parent="."]
margin_left = 629.7
margin_top = 702.708
margin_right = 669.7
margin_bottom = 716.708
text = "4"

[node name="Label5" type="Label" parent="."]
margin_left = 627.433
margin_top = 780.08
margin_right = 683.433
margin_bottom = 794.08
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "5"

[node name="Label6" type="Label" parent="."]
margin_left = 1338.38
margin_top = 477.08
margin_right = 1385.38
margin_bottom = 493.08
text = "6"

[node name="Label7" type="Label" parent="."]
margin_left = 1339.76
margin_top = 550.984
margin_right = 1388.76
margin_bottom = 568.984
text = "7"

[node name="Label8" type="Label" parent="."]
margin_left = 1342.68
margin_top = 627.567
margin_right = 1382.68
margin_bottom = 646.567
text = "8"

[node name="Label9" type="Label" parent="."]
margin_left = 1340.27
margin_top = 703.391
margin_right = 1380.27
margin_bottom = 717.391
text = "9"

[node name="Label10" type="Label" parent="."]
margin_left = 1347.76
margin_top = 779.15
margin_right = 1387.76
margin_bottom = 793.15
text = "10"

[node name="Label11" type="Label" parent="."]
margin_left = 1336.84
margin_top = 401.125
margin_right = 1376.84
margin_bottom = 415.125
text = "11"

[node name="Sprite" type="Sprite" parent="."]
z_index = -2
texture = ExtResource( 2 )
centered = false
__meta__ = {
"_edit_lock_": true
}
